--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,8 +16,7 @@
     <fragment
         android:id="@+id/resultFragment"
         android:name="com.bignerdranch.android.basicgame.ResultFragment"
-        android:label="fragment_result"
-        tools:layout="@layout/fragment_result" >
+        android:label="fragment_result">
         <argument
             android:name="result"
             app:argType="string" />
