добавил в GameFragment compose с элементами

--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -4,6 +4,7 @@
     tools:context=".GameFragment">
 
     <data>
+
         <variable
             name="gameViewModel"
             type="com.bignerdranch.android.basicgame.viewmodel.GameViewModel" />
@@ -23,14 +24,16 @@
             android:letterSpacing="0.1"
             android:text="@{gameViewModel.secretWordDisplay}"
             android:textSize="36sp" />
+
         <TextView
             android:id="@+id/lives"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@{@string/lives_left(gameViewModel.livesLeft)}"
             android:padding="10dp"
+            android:text="@{@string/lives_left(gameViewModel.livesLeft)}"
             android:textSize="16sp" />
+
         <TextView
             android:id="@+id/incorrect_guesses"
             android:layout_width="wrap_content"
@@ -38,6 +41,7 @@
             android:layout_gravity="center"
             android:text="@{@string/incorrect_guesses(gameViewModel.incorrectGuesses)}"
             android:textSize="16sp" />
+
         <EditText
             android:id="@+id/guess"
             android:layout_width="wrap_content"
@@ -60,7 +64,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Finish Game"
-            android:onClick="@{() -> gameViewModel.finishGame()}"/>
+            android:onClick="@{() -> gameViewModel.finishGame()}"
+            android:text="Finish Game" />
+
+        <androidx.compose.ui.platform.ComposeView
+            android:id="@+id/compose_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </layout>
